# myinfra

./: Pipfile  README.md  inventory.py  pyproject.toml  pyproject.toml2
src/myinfra/: __init__.py  apt.py  inventory.py
yay/: facts.py  yay.py
