[project]
name = "myinfra"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "asm0dey", email = "pavel.finkelshtein@gmail.com" }
]
dependencies = [
    "pyinfra>=2.9.2",
    "black>=24.4.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
